# text-fabric

./: .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  NEW_DEVELOPMENTS.md  README.md  SECURITY.md  ZipAll.ipynb  algorithms.ipynb  app.html  azbnsetup.sh  bhsa-DefaulT.tfjob  bhsa-test.ipynb  bhsa.ipynb  build.py  cheatsheet.html  clean.html  cloc_exclude.lst  cloc_exclude_t.lst  codemeta-harvest.json  codemeta-harvest.yaml  codemeta.json  commitapps.sh  conf.py  conf.py.bck  cunei-DefaulT.tfjob  cunei-test.ipynb  doc-search.html  fabric.html  fromShebanq.csv  gh-deploy.py  index.html  index.js  lib.html  manageapps.sh  mkdocs.yml  (+21 more)
About/Corpora/: index.html
About/Faq/: index.html
About/Install/: index.html
About/News/: index.html
About/Older/: index.html
About/Story/: index.html
Add/: index.html
Api/App/: index.html
Api/Apps/: index.html
Api/Bhsa/: index.html
Api/Compose/: index.html
Api/Computed/: index.html
Api/Convert/: index.html
Api/Core/: index.html
Api/Cunei/: index.html
Api/Data/: index.html
Api/Fabric/: index.html
Api/Features/: index.html
Api/General/: index.html
Api/Github/: index.html
Api/Helpers/: index.html
Corpora/: index.html
Faq/: index.html
Install/: index.html
News/: index.html
Search/: index.html  search_index.json
Stats/: index.html
Use/: index.html
Use7/: index.html
Versions/: etcbc-versions.ipynb  etcbc_nodes.ipynb  mapping.ipynb  strong.ipynb
Writing/: Arabic.html  Hebrew.html  Syriac.html
about/: apps.html  background.html  browser.html  code.html  corpora.html  datamodel.html  datasharing.html  displaydesign.html  faq.html  fileformats.html  index.html  install.html  optimizations.html  releases.html  releasesold.html  searchdesign.html  searchusage.html  tests.html  use.html
advanced/: app.html  condense.html  data.html  display.html  find.html  helpers.html  highlight.html  index.html  links.html  options.html  render.html  repo.html  search.html  sections.html  settings.html  tables.html  text.html  unravel.html  zipdata.html
applib/: app.html  condense.html  data.html  display.html  displaylib.html  displaysettings.html  find.html  helpers.html  highlight.html  index.html  links.html  repo.html  search.html  sections.html  settings.html  tables.html  text.html  zipdata.html
codestyle/: contributing.md  eslintrc.txt  flake8.txt  prettierrc.txt  style.yapf.txt
compose/: combine.html  index.html  modify.html  nodemaps.html
convert/: index.html  mql.html  recorder.html  tf.html  walker.html
core/: api.html  computed.html  data.html  edgefeature.html  helpers.html  index.html  locality.html  nodefeature.html  nodes.html  oslotsfeature.html  otypefeature.html  prepare.html  text.html  timestamp.html
data9/: bisect.ipynb  index.ipynb  integers.ipynb  ints.c  ints.py  perf3.8.3.ipynb  sparse.ipynb  strings.ipynb  tfcython.ipynb
docs/: Add.md  Corpora.md  Faq.md  Install.md  News.md  Search.md  Stats.md  Use.md  Use7.md  algorithms.ipynb  conf.py  conf.py.bck  etcbc4c.ipynb  greekTest.ipynb  index.md  memtests.ipynb  phonoTf.ipynb  searchFromMQL.ipynb  searchProofs.ipynb  searchTest.ipynb  searchTutorial.ipynb  test.ipynb  tf.ipynb  tfFromLAF.ipynb  tutorial.ipynb  tutorialGNT.ipynb  tutorialSanskrit.ipynb  tutorialSumerian.ipynb  yesh.ipynb
documentation/: mkdocs.yml
emdros2fabric/: etcbc.py  mylib.py  run.py  settings.py  transform.py
examples/: compose.ipynb
exercises/: Complexity.key  Exod_19_12.ipynb  ExtraBiblical.ipynb  complexity.xlsx  complexityGNT.ipynb  linkedData.ipynb  subjectCases.xlsx  subjects.ipynb  tfFromMql.py  yamlFromGNT.ipynb  ~$complexity.xlsx
images/: Display.key  Spatial.key  TF-logo.key  cunei-DefaulT.tfjob
legacy/: ner.py  repoOld.py
legacydocs/: BHSA-Transcription.md  codemeta.json  conf.py  conf.py.bck  index.tpl  main.css  searchTutorial.ipynb  tutorial.ipynb
notebooks/: __otype__.tf  algorithms.ipynb  etcbc4c.ipynb  test.json  tf-generate.ipynb  tf.ipynb  tf_premature.ipynb
phono/: .mixed_debug4c.txt.swo  mixed.txt  mixed4c.html  mixed_debug4c.txt  phonoTf.html  phonoTf.ipynb  qamets_nonverb_cases4c.html  qamets_nonverb_tests.txt  qamets_nonverb_tests4c.html  qamets_nonverb_tests4c.txt  qamets_nonverb_tests_debug4c.txt  qamets_prs_cases4c.html  qamets_prs_tests.txt  qamets_prs_tests4c.html  qamets_prs_tests4c.txt  qamets_prs_tests_debug4c.txt  qamets_qatan_individuals.txt  qamets_verb_cases4c.html  qamets_verb_tests.txt  qamets_verb_tests4c.html  qamets_verb_tests4c.txt  qamets_verb_tests_debug4c.txt  special_cases4c.html  special_cases_out4c.txt
search/: graph.html  index.html  relations.html  search.html  search_index.json  searchexe.html  semantics.html  spin.html  stitch.html  syntax.html
server/: command.html  controllers.py  index.html  index.py  kernel.html  monitor.html  serve.html  serve.py  serve.sh  serveTf.py  servelib.html  start.html  web.html  wrap.html
test/: app.py  bhsa-DefaulT.tfjob  hello.py  srun.py  test.tf  use.ipynb
tests/: monads_meta.tf  psp.tf
text_fabric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tf/: __init__.py  api.py  app.html  app.py  apphelpers.py  appmake.py  capable.html  capable.py  cheatsheet.html  cheatsheet.py  clean.html  clean.py  context.py  cunei.py  data.py  fabric.html  fabric.py  feature.py  helpers.py  index.html  layer.py  lib.html  lib.py  locality.py  miniapi.py  mql.py  notebook.py  parameters.html  parameters.py  prepare.py  search.py  search.pyx  service.py  text-new.py  text.py  timestamp.py  transcription.py  zip.html  zip.py  zipdata.py
tfFromLaf/: etcbc4c.ipynb  tfFromLAF.ipynb  tfFromLAF4-4b.ipynb
tfFromMQL/: ExtraBiblical.ipynb
tfFromSanskrit/: tfFromSanskrit.ipynb
tfFromSblgnt/: blang.txt  tfFromSblgnt.ipynb
tfFromSumerianTEI/: tfFromSumerianTEI.ipynb
tfql/: tfQuery.ipynb  tfQueryOld.ipynb  tfQueryOlder.ipynb  tfql.ipynb  yesh.ipynb
tools/: checkdiffs.py  pdocs.py  release.py
writing/: arabic.html  greek.html  hebrew.html  index.html  syriac.html  transcription.html
(+1702 files in other folders)
