[metadata]
name = text-fabric
version = 12.0.3
description = Processor and browser for annotated text corpora
long_description = file README.md
author = Dirk Roorda
author_email = dirk.roorda@di.huc.knaw.nl
url = https://github.com/annotation/text-fabric

classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Religion
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Hebrew
    Natural Language :: Greek
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: JavaScript
    Topic :: Religion
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Sociology :: History
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Markup
keywords =
    text
    linguistics
    database
    graph
    hebrew
    bible
    peshitta
    quran
    cuneiform
    uruk
    greek
    syriac
    akkadian
    babylonian

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9.0
install_requires =
    wheel
    markdown>=3.4.1
    ipython
    lxml
    pyyaml>=5.3
    flask

packages = 
    tf
    tf.about
    tf.advanced
    tf.client
    tf.client.make
    tf.client.static
    tf.convert
    tf.convert.app
    tf.convert.app.static
    tf.core
    tf.dataset
    tf.search
    tf.browser
    tf.browser.static
    tf.browser.static.fonts
    tf.browser.static.mathjax
    tf.browser.static.mathjax.input
    tf.browser.static.mathjax.output
    tf.browser.static.mathjax.ui
    tf.browser.templates
    tf.tools
    tf.tools.tei
    tf.tools.trang
    tf.volumes
    tf.writing

[options.extras_require] 
github = pygithub>=1.57
gitlab = python-gitlab>=3.5.0
all = pygithub>=1.57; python-gitlab>=3.5.0

[options.exclude_package_data]
* =
    text_fabric.egg-info
    __pycache__
    .DS_Store
    docs
    tests

[options.entry_points]
console_scripts =
    tf = tf.browser.start:main
    text-fabric = tf.browser.start:main
    tf-zipall = tf.zip:main
    tf-zip = tf.advanced.zipdata:main
    text-fabric-zip = tf.advanced.zipdata:main
    tf-make = tf.client.make.build:main
    text-fabric-make = tf.client.make.build:main
    tf-nbconvert = tf.tools.nbconvert:main
    nbconvert = tf.tools.nbconvert:main
    tf-xmlschema = tf.tools.xmlschema:main
    xmlschema = tf.tools.xmlschema:main
    tf-fromxml = tf.convert.xml:main
    tf-fromtei = tf.convert.tei:main
    tf-addnlp = tf.convert.addnlp:main
    addnlp = tf.convert.addnlp:main
